project(demo)

add_executable(${PROJECT_NAME} demo.cpp)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)

find_package(OpenCV REQUIRED)
target_link_libraries( ${PROJECT_NAME}
	PRIVATE color_correction opencv_core opencv_highgui opencv_imgproc
)

install(TARGETS ${PROJECT_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}")

install(DIRECTORY "data"
	DESTINATION "${CMAKE_INSTALL_PREFIX}"
)

install(DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/"
	DESTINATION "${CMAKE_INSTALL_PREFIX}"
	FILES_MATCHING 
	PATTERN "*.dll"
)

install(DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/"
	DESTINATION "${CMAKE_INSTALL_PREFIX}"
	FILES_MATCHING 
	PATTERN "*.dll"
)

install(DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/"
	DESTINATION "${CMAKE_INSTALL_PREFIX}"
	FILES_MATCHING 
	PATTERN "*.dll"
)

install(DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO}/"
	DESTINATION "${CMAKE_INSTALL_PREFIX}"
	FILES_MATCHING 
	PATTERN "*.dll"
)